# cat-a-hydrography

./: README.md  documentation_outline.md  pyproject.toml  requirements.txt
b1_1c_nl_solutions/: precision.py  solvers.py
b1_1c_nl_solutions/hydrography/: __init__.py
b1_1c_nl_solutions/tests/: test_hydrography.py  test_precision.py  test_solvers.py
b1_1c_nl_solutions/widgets/: convergence_visualization.py  equation_sandbox.py  rounding_error_explorer.py
book/: B1_1c_Non_Linear_Solutions.ipynb  _toc.yml  b1-1a-geometry.md  b1-1b-linear-algebra.md  b1.1a-geometry.md  b1_1b.py  f1-1-physical-geodesy.md  f1-4-levelling.md  f1.1-physical-geodesy.md  f1.4-levelling.md  f1.5-map-projections.md  intro.md
book/tutorials/: basics.md  interactive_widgets.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/b1_1b_linear_algebra_20260306/: index.md  plan.md  spec.md
conductor/archive/chapter_b1_1a_geometry_20260305/: metadata.json
conductor/tracks/B1.1c_non_linear_20260310/: plan.md  (+5 more)
deepresearch/: b1.1a-geometry-report-conic-sections-and-parametric-equations.md  b1.1b-linear-algebra-in-geodesy.md  b1.1c-numerical-methods-for-linear-systems.md  b1.2a-hydrographic-calculus.md  b1.2b-differential-equations.md  b1.2c-numerical-solutions-of-non-linear-equations.md  f1.1-physical-geodesy.md  f1.4-levelling.md  f1.5-map-projections.md
tests/: test_b1_1a_geometry.py  test_b1_1b.py  test_docs.py  test_f1_1_gravity.py  test_f1_4_calculations.py  test_f1_4_database.py  test_f1_5_distortions.py  test_f1_5_geospatial.py  test_f1_5_pbl.py
(+26 files in other folders)
